feat(API): add Board Laws endpoints
show and create
