# app/serializers/v1/board_law_serializer.rb
@@ -1,0 +1,5 @@
+class V1::BoardLawSerializer < ActiveModel::Serializer
+  type :board_law
+
+  attributes :law, :list_tid, :settings
+end
